fixed overflow and built

--- a/src/components/contact/contact.module.css
+++ b/src/components/contact/contact.module.css
@@ -12,7 +12,7 @@
     align-items: center;
     justify-content: center;
     opacity: 0;
-    transform: translateX(30%);
+    transform: translateX(-30%);
 }
 .contact.loaded > div > div:last-child{
     animation: loadingFade1 2s cubic-bezier(0.645, 0.045, 0.355, 1) 0s 1 forwards;
@@ -47,7 +47,7 @@
 @keyframes loadingFade1{
     0%{
         opacity: 0;
-        transform: translateX(30%);
+        transform: translateX(-30%);
     }
     100%{
         transform: translateX(0%);
